# c-lang-ssa

./: .gitignore  README.md  pyproject.toml
c-lang-ssa/: __init__.py  __main__.py
c-lang-ssa/cfgpass/: __init__.py  block.py  cfgpass.py
c_lang_ssa/: __init__.py  __main__.py  ast_utils.py
c_lang_ssa/block/: block.py
c_lang_ssa/cfgpass/: __init__.py  cfgpass.py
c_lang_ssa/ssapass/: __init__.py  ssapass.py
examples/: basic.c  basic_with_cycles.c
